# gradient-descent

./: README.md  gradient-descent.cabal
src/Math/: AD.hs  GradientDescent.hs
src/Math/GradientDescent/: Gradient.hs  Params.hs  Unsized.hs
test/: Asteroid.hs  Main.hs  SinWave.hs
test/Asteroid/: Math.hs
