cabal-version:      3.4
name:               gradient-descent
version:            0.0.0.1
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Tom Cumming
maintainer:         mail@tomcumming.co.uk
-- copyright:
category:           Math

common shared
    ghc-options: -Wall
    default-language: GHC2021
    default-extensions:
        DataKinds
        RecordWildCards
    build-depends:
        base ^>=4.16.4.0,
        vector,
        sized

library
    import:           shared
    exposed-modules: Math.AD, Math.GradientDescent
    hs-source-dirs:   src
    build-depends:
        indexed-traversable

test-suite gradient-descent-test
    import:           shared
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        gradient-descent
