cabal-version: 3.4
name: gradient-descent
version: 1.0.0.0
license: MIT
license-file: LICENSE
author: Tom Cumming
maintainer: mail@tomcumming.co.uk
category: Math

common shared
    ghc-options: -Wall
    default-language: GHC2021
    default-extensions:
        LambdaCase
        RecordWildCards
        FunctionalDependencies
    build-depends:
        base ^>=4.16.4.0,
        mtl

library
    import: shared
    exposed-modules:
        Math.GradientDescent
        Math.GradientDescent.Params
    hs-source-dirs: src

test-suite gradient-descent-test
    import: shared
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs
    other-modules:
    build-depends:
        gradient-descent
